test/classes/deitz/test_inherit_mod3.good
Error: Unresolved call ':C.x' (test_inherit_mod3.chpl:11)
Candidates are:
  :D1.x (test_inherit_mod3.chpl:4)
  :D2.x (test_inherit_mod3.chpl:8)
